--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -42,7 +42,7 @@
   @extend $base-style
   clearfix()
   color: color-default
-  padding: 0 article-padding
+  padding: 20px article-padding 0
   p, table
     line-height: line-height
     margin: line-height 0
